--- a/src/resources/elements/monaco-editor/editor-controller.scss
+++ b/src/resources/elements/monaco-editor/editor-controller.scss
@@ -11,5 +11,32 @@
 }
 
 .editor-controller-button {
+  margin-right: 0.25rem;
+  padding: 0.187rem 0.375rem;
+  vertical-align: 0;
+}
+
+#editor-controller-counters {
+  padding: 0.375rem 0.75rem;
+}
+#editor-controller-counters span {
+  padding: 0.03rem 0.375rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  border-color: #343a40;
   margin-right: 0.5rem;
+}
+.form-group {
+  margin-top: 0.5rem;
+  margin-bottom: 0;
+}
+
+.dropdown-menu {
+  padding: 0.5rem;
+}
+
+#total-time {
+  width: 4rem;
+  display: inline-block;
+  height: calc(1.5rem + 2px);
 }
