--- a/src/resources/elements/monaco-editor/editor-controller.scss
+++ b/src/resources/elements/monaco-editor/editor-controller.scss
@@ -43,6 +43,13 @@
   border: 1px solid #ced4da;
 }
 
+#editor-controller-options input[type='checkbox'] {
+  margin-left: 0
+}
+#editor-controller-options .form-group:nth-child(odd) label {
+  margin-left: 1.25rem;
+}
+
 #editor-controller-options input[type='number'] {
   padding: 0.375rem;
   display: inline-block;
